--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,9 @@
             "args": [
                 "--num_epoch",
                 "1",
+                "--save_weights",
+                "--pretrain_weights",
+                "${workspaceFolder}/weights/MNIST/2025-04-08_15-13-25.pth"
             ]
         }
     ]
