update vscode debug settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "autoencoder",
         "finetune",
+        "finetuning",
         "histogramdd",
         "kmeans",
         "Maaten",
