--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,11 +11,13 @@
             "program": "${file}",
             "console": "integratedTerminal",
             "args": [
-                "--num_epoch",
-                "1",
+                "--pretrain_iterations",
+                "10",
+                "--finetune_iterations",
+                "10",
                 "--save_weights",
                 // "--pretrain_weights",
-                // "${workspaceFolder}/weights/MNIST/2025-04-08_15-58-10.pth"
+                // "${workspaceFolder}/weights/MNIST/2025-04-09_20-42-06.pth"
             ]
         }
     ]
