--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python 调试程序: 当前文件",
+            "name": "预训练AutoEncoder",
             "type": "debugpy",
             "request": "launch",
             "program": "${file}",
@@ -16,8 +16,17 @@
                 "--finetune_epochs",
                 "1",
                 "--save_weights",
-                // "--pretrain_weights",
-                // "${workspaceFolder}/weights/MNIST/2025-04-09_20-42-06.pth"
+            ]
+        },
+        {
+            "name": "优化AutoEncoder",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal",
+            "args": [
+                "--pretrain_weights",
+                "${workspaceFolder}/weights/MNIST/init_235_fintune_470.pth",
             ]
         }
     ]
